Scrollbar styling fixed and reset queue added

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -155,6 +155,16 @@ table > tbody > tr > td:last-child {
   align-items: center;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
 .backdrop {
   height: 100%;
   width: 100%;
